--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 	<title>Dashboard</title>
 	<meta charset="utf-8">
 	<meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" name="viewport">
-	<meta name="description" content="NoxonFund investments">
-	<meta name="keywords" content="financial template, ethereum, dao ethereum, noxon project">
+	<meta name="description" content="Darkstars Atrium Fund investments">
+	<meta name="keywords" content="financial template, ethereum, dao ethereum, darkstars, vues project">
 	<link rel="apple-touch-icon" href="apple-touch-icon.png">
     <link rel="stylesheet" href="css/dashboardred.css">
 	<link rel="stylesheet" href="css/jquery-u.css">
