--- a/index.html
+++ b/index.html
@@ -20,6 +20,16 @@
 	</head>
 
 <body>
+	<div class="topnav">
+  <a class="active" href="https://darkstars.us/members/darkstar/posts/">PROFILE</a>
+  <a class="active" href="https://darkstars.us/seed/">SEED</a>
+  <a href="https://darkstars.us/ips/">IPS</a>
+  <a href="https://darkstars.us/cbxpoll/whose-n3xt/">VOTE</a>
+  <div class="topnav-right">
+    <a href="https://darkstars.us/games/">GAMES</a>
+    <a href="https://darkstars.us/cre8/">CRE8</a>
+  </div>
+</div>
 	<div class="b-form-place container">
 		<div class="row" id='reg'>
 		<div class="col-md-offset-2 col-md-8" style='display:none' id='right'>
