--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
 	<div class="topnav">
   <a class="active" href="https://darkstars.us/members/darkstar/posts/">PROFILE</a>
   <a class="active" href="https://darkstars.us/seed/">SEED</a>
-  <a href="https://darkstars.us/ips/">IPS</a>
-  <a href="https://darkstars.us/cbxpoll/whose-n3xt/">VOTE</a>
-  <a href="https://darkstars.us/games/">GAMES</a>
-  <a href="https://darkstars.us/cre8/">CRE8</a>
+  <a class="active" href="https://darkstars.us/ips/">IPS</a>
+  <a class="active" href="https://darkstars.us/cbxpoll/whose-n3xt/">VOTE</a>
+  <a class="active" href="https://darkstars.us/games/">GAMES</a>
+  <a class="active" href="https://darkstars.us/cre8/">CRE8</a>
   </div>
 	<div class="topnav-right">
 </div>
